--- a/Automacao_SRT.ipynb
+++ b/Automacao_SRT.ipynb
@@ -60,7 +60,11 @@
     "    pyautogui.hotkey(\"space\")\n",
     "    \n",
     "    contador = contador + 1\n",
-    "    \n"
+    "    \n",
+    "    if contador < 30:\n",
+    "        print(contador)\n",
+    "        elif\n",
+    "        print(\"Rotina concluída.\")"
    ]
   },
   {
